@@ -28,9 +28,6 @@ realm = "1.13.0"
 coroutines = "1.8.0"
 stately = "2.0.5"
 
-##temp voyager navigation:
-#voyager="1.0.0"
-
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlin-test-junit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
@@ -57,12 +54,6 @@ jb-androidx-navigation-compose = { module = "org.jetbrains.androidx.navigation:n
 mongodb-realm = { module = "io.realm.kotlin:library-base", version.ref = "realm"}
 kotlin-coroutines = { module =  "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines"}
 stately-common = { module = "co.touchlab:stately-common", version.ref = "stately"}
-
-##temp voyager navigation:
-#navigator = { module = "cafe.adriel.voyager:voyager-navigator", version.ref = "voyager"}
-#navigator-screen-model = { module = "cafe.adriel.voyager:voyager-screenmodel", version.ref = "voyager"}
-#navigator-transitions = { module = "cafe.adriel.voyager:voyager-transitions", version.ref = "voyager"}
-#navigator-koin = { module = "cafe.adriel.voyager:voyager-koin", version.ref = "voyager"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
